--- a/user.html
+++ b/user.html
@@ -9,6 +9,6 @@
     <p>user!</p>
     <button>reset</button>
     <button>cancel</button>
-    <button>pause</button>
+    <button>pause1</button>
 </body>
 </html>
